fix jumping button send

--- a/Singolo_new/client/styles/css/index.css
+++ b/Singolo_new/client/styles/css/index.css
@@ -715,6 +715,7 @@ footer .container .social {
 }
 .quote .container form button {
   float: right;
+  height: 30px;
   margin-top: 10px;
   padding: 5px;
   border: 2px solid #aa3b3e;
