--- a/Singolo_new/client/styles/scss/layouts/homepage/_quote.scss
+++ b/Singolo_new/client/styles/scss/layouts/homepage/_quote.scss
@@ -18,6 +18,7 @@
 			font-size: 12px;
 			button {
 				float: right;
+				height: 30px;
 				margin-top:10px;
 				padding:5px;
 				border:2px solid #aa3b3e;
